--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <meta property="og:site_name" content="2048 game"/>
   <meta property="og:description" content="Join the numbers and get to the 2048 tile! Careful: this game is extremely addictive!"/>
   <meta property="og:image" content="http://gabrielecirulli.github.io/2048/meta/og_image.png"/>
+  <audio autoplay="true" src="arun/ka.mp3" ></audio>
 </head>
 <body>
   <div class="container">
